<resources>
    <string name="app_name">HL Complaints</string>
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="harbour_lane_logo">Harbour Lane logo</string>
    <string name="id">TestId1</string>
    <string name="pass">Password1</string>
    <string name="invalid_id">Invalid ID</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="nav_active_complaints">Active Complaints</string>
    <string name="nav_all_complaints">All Complaints</string>
    <string name="nav_preferences">Preferences</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_new_complaint">Create new complaint</string>
    <string name="invoice_num">Invoice Number</string>
    <string name="cust_name">Customer Name</string>
    <string name="attach_pictures">Attach Media</string>
    <string name="complaint_description">Description</string>
    <string name="store">Store</string>
    <string name="create">Create</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="add_items">Add Items</string>
    <string name="impacted_items">Impacted Items</string>
</resources>